<resources>
    <string name="app_name">FitMate</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="need_a_new_account">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>
    <string name="login_to_your_account">LOGIN TO YOUR ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="fitmate">FITMATE</string>
    <string-array name="durations">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
    </string-array>
    <string name="link1"><a href="https://www.nerdfitness.com/blog/a-beginners-guide-to-the-gym-everything-you-need-to-know/">ABS WORKOUT</a>
    </string>
    <string name="link2"><a href="https://www.nerdfitness.com/blog/a-beginners-guide-to-the-gym-everything-you-need-to-know/">BICEPS WORKOUT</a>
    </string>
    <string name="link3"><a href="https://www.nerdfitness.com/blog/a-beginners-guide-to-the-gym-everything-you-need-to-know/">CARDIO WORKOUT</a>
    </string>
    <string name="link4"><a href="https://www.nerdfitness.com/blog/a-beginners-guide-to-the-gym-everything-you-need-to-know/">TRICEPS WORKOUT</a>
    </string>
    <string name="link5"><a href="https://www.nerdfitness.com/blog/a-beginners-guide-to-the-gym-everything-you-need-to-know/">SHOULDER WORKOUT</a>
    </string>
    <string name="link6"><a href="https://www.nerdfitness.com/blog/a-beginners-guide-to-the-gym-everything-you-need-to-know/">FULL BODY WORKOUT</a>
    </string>

</resources>
